--- a/index.html
+++ b/index.html
@@ -2753,7 +2753,7 @@
         </div>
     </section>
     <footer style="background: var(--gray-100); text-align: center; padding: 40px 20px; color: var(--gray-500); font-size: 14px;">
-    &copy; 2025 <a href="https://www.linkedin.com/in/erincgray/" target="_blank" rel="noopener noreferrer" style="color: var(--primary); text-decoration: none; font-weight: 600; transition: color 0.3s ease;">Ering Gray</a>
+    &copy; 2025 <a href="https://www.linkedin.com/in/erincgray/" target="_blank" rel="noopener noreferrer" style="color: var(--primary); text-decoration: none; font-weight: 600; transition: color 0.3s ease;">Erin Gray</a>
 </footer>
 
     <script>
